--- a/block-BHaacs/index.html
+++ b/block-BHaacs/index.html
@@ -9,14 +9,14 @@
     <!-- Font Family -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- <link
+    <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <script
       src="https://kit.fontawesome.com/f1a9dfe756.js"
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
     <title>Selectors Assignment</title>
   </head>
   <body>
