--- a/block-BHaacs/index.html
+++ b/block-BHaacs/index.html
@@ -85,6 +85,9 @@
             <div class="arrow-right"></div>
             <a href="#" class="btn btn-primary">Learn More</a>
             <div class="arrow-right-second"></div>
+            <div class="arrow-right-third"></div>
+            <div class="hide-1"></div>
+            <div class="hide-2"></div>
           </div>
         </div>
         <div class="flex-40 col text-right">
